--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,65 @@
-node_modules
+# Dependencies
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Build output
+dist/
+dist-ssr/
+*.local
+
+# Editor
+.vscode/*
+!.vscode/extensions.json
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Environment
 .env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.*.local
+.env.production
 
+# Logs
+logs/
+*.log
 
-dist
+# Docker
+.docker/
+docker-compose.override.yml
+
+# SSL certificates (never commit!)
+nginx/ssl/*.pem
+nginx/ssl/*.key
+nginx/ssl/*.crt
+
+# Cache
+.cache/
+.parcel-cache/
+.vite/
+.eslintcache
+
+# Testing
+coverage/
+.nyc_output/
+
+# Misc
+*.tgz
