Fix Dockerfile - use npm install instead of npm ci

--- a/Dockerfile.prerender
+++ b/Dockerfile.prerender
@@ -6,9 +6,11 @@ FROM mcr.microsoft.com/playwright:v1.40.0-jammy
 # Set working directory
 WORKDIR /app
 
-# Install dependencies for Express
+# Copy package files
 COPY prerender/package*.json ./
-RUN npm ci --only=production
+
+# Install dependencies
+RUN npm install --omit=dev
 
 # Copy prerender server
 COPY prerender/server.js ./
